# modelbench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  conftest.py  mkdocs.yml  mypy.ini  publish_all.py  pyproject.toml  roo.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  failed-scheduled-issue.md
bbq/: README.md  pyproject.toml
demo_plugin/: README.md  pyproject.toml
demo_plugin/modelgauge/annotators/: demo_annotator.py
demo_plugin/modelgauge/suts/: demo_01_yes_no_sut.py  demo_02_secrets_and_options_sut.py  demo_03_sut_with_args.py
demo_plugin/modelgauge/tests/: demo_01_simple_qa_test.py  demo_02_unpacking_dependency_test.py  demo_03_paired_prompts_test.py  demo_03_using_annotation_test.py  demo_04_using_annotation_test.py
demo_plugin/modelgauge/tests/specifications/: demo_01.toml
demo_plugin/newhelm/annotators/: demo_annotator.py
demo_plugin/newhelm/benchmarks/: demo_benchmark.py
demo_plugin/newhelm/plugins/benchmarks/: demo_benchmark.py
demo_plugin/newhelm/plugins/suts/: demo_01_multiple_choice_sut.py
demo_plugin/newhelm/plugins/tests/: demo_01_simple_qa_test.py  demo_02_unpacking_dependency_test.py  demo_03_paired_prompts_test.py
demo_plugin/newhelm/suts/: demo_01_multiple_choice_sut.py  demo_01_yes_no_sut.py  demo_02_secrets_and_options_sut.py  demo_03_sut_with_args.py
demo_plugin/newhelm/tests/: demo_01_simple_qa_test.py  demo_02_unpacking_dependency_test.py  demo_03_paired_prompts_test.py  demo_04_using_annotation_test.py
demo_plugin/web_data/: README.md  an_example.jsonl  paired_questions.jsonl
docs/: add-a-new-sut-driver.md  add-a-sut.md  design_philosophy.md  dev_quick_start.md  index.md  plugins.md  predefined-suts.md  prompt_response_tests.md  publishing.md  run-journal.md  suts-how-to.md  tutorial.md  tutorial_suts.md  tutorial_tests.md  user_quick_start.md
helm_ports/: README.md  pyproject.toml
helm_ports/newhelm/plugins/benchmarks/: helm_benchmark.py
helm_ports/newhelm/plugins/tests/: bbq_imported.py
mmlu/: pyproject.toml
mmlu/newhelm/plugins/tests/: mmlu.py
modelgauge/: aggregations.py  annotation_pipeline.py  annotator.py  base_test.py  caching.py  command_line.py  data_packing.py  dependency_helper.py  external_data.py  general.py  main.py  (+19 more)
plugins/amazon/: README.md  pyproject.toml
plugins/amazon/modelgauge/suts/: aws_bedrock_client.py
plugins/amazon/tests/: test_aws_bedrock_client.py
plugins/anthropic/: README.md  pyproject.toml
plugins/anthropic/modelgauge/suts/: anthropic_api.py
plugins/anthropic/tests/: test_anthropic_api.py
plugins/google/: README.md  pyproject.toml
plugins/google/modelgauge/suts/: google_genai.py  google_genai_client.py  google_generativeai.py
plugins/google/tests/: test_google_genai.py  test_google_genai_client.py  test_google_generativeai.py
plugins/huggingface/: README.md  pyproject.toml
plugins/huggingface/modelgauge/suts/: huggingface_api.py  huggingface_chat_completion.py  huggingface_chat_completion_lg.py  huggingface_client.py  huggingface_inference.py  huggingface_sut_factory.py  huggingface_sut_maker.py
plugins/huggingface/newhelm/suts/: huggingface_client.py
plugins/huggingface/tests/: fake_model.py  test_huggingface_api.py  test_huggingface_chat_completion.py  test_huggingface_client.py  test_huggingface_inference.py  test_huggingface_sut_factory.py  test_huggingface_sut_maker.py  test_sut_maker.py
plugins/mistral/: README.md  pyproject.toml
plugins/mistral/modelgauge/suts/: mistral_client.py  mistral_sut.py
plugins/mistral/tests/: test_mistral_sut.py
plugins/mistralai/: pyproject.toml
plugins/mistralai/modelgauge/suts/: mistralai_client.py
plugins/mistralai_sut/: pyproject.toml
plugins/mistralai_sut/modelgauge/suts/: mistralai_client.py  vertexai_client.py
plugins/mistralai_sut/tests/: test_mistralai_client.py
plugins/multi_turn_safety/: README.md  pyproject.toml
plugins/multi_turn_safety/modelgauge/tests/: multi_turn_safe.py
plugins/openai/: README.md  pyproject.toml
plugins/openai/modelgauge/annotators/: openai_compliance_annotator.py
plugins/openai/modelgauge/suts/: openai_client.py
plugins/openai/newhelm/annotators/: openai_compliance_annotator.py
plugins/openai/newhelm/plugins/suts/: openai_client.py
plugins/openai/newhelm/suts/: openai_client.py
plugins/openai/tests/: test_openai_client.py  test_openai_compliance_annotator.py
plugins/perspective_api/: README.md  pyproject.toml
plugins/perspective_api/modelgauge/annotators/: perspective_api.py
plugins/perspective_api/newhelm/annotators/: perspective_api.py
plugins/perspective_api/tests/: test_perspective_api.py
plugins/standard_tests/: pyproject.toml
plugins/standard_tests/modelgauge/tests/: bbq.py  discrim_eval.py  real_toxicity_prompts.py  safe.py  simple_safety_tests.py  xstest.py
plugins/standard_tests/newhelm/tests/: bbq.py  discrim_eval.py  real_toxicity_prompts.py  safe.py  simple_safety_tests.py  xstest.py
plugins/standard_tests/newhelm/tests/specifications/: bbq.toml  real_toxicity_prompts.toml  safe-cae-benign.toml  safe-cae.toml  safe-cbr.toml  safe-gra.toml  safe-ssh-benign.toml  safe-ssh.toml  safe-ter-benign.toml  safe-ter.toml  simple_safety_tests.toml  xstest.toml
plugins/standard_tests/tests/: test_discrim_eval.py  test_safe.py  test_simple_safety_tests.py  test_xs_tests.py
plugins/together/: README.md  pyproject.toml
plugins/together/modelgauge/annotators/: llama_guard_annotator.py
plugins/together/modelgauge/suts/: together_client.py
plugins/together/newhelm/annotators/: llama_guard_annotator.py
plugins/together/newhelm/suts/: together_cli.py  together_client.py
plugins/together/tests/: test_llama_guard_annotator.py  test_together_client.py
plugins/vertexai/: README.md  pyproject.toml
plugins/vertexai/modelgauge/suts/: mistralai_sut.py  vertexai_client.py  vertexai_mistral_sut.py
plugins/vertexai/tests/: test_mistralai_sut.py  test_vertexai_mistral_sut.py
ridiculous_benchmark/: pyproject.toml
ridiculous_benchmark/newhelm/plugins/benchmarks/: ridiculous_benchmark.py
(+652 files in other folders)
