[project]
name = "modelbench"
requires-python = ">=3.12,!=3.12.5,<4"
version = "1.0.0"
description = "Run benchmarks and generate reports measuring the behavior of many AI Systems."
license = "Apache-2.0"
authors = [
    { name = "MLCommons AI Safety", email = "ai-safety-engineering@mlcommons.org" },
]
readme = "README.md"
keywords = [
    "AI",
    "GenAI",
    "LLM",
    "NLP",
    "evaluate",
    "measure",
    "quality",
    "testing",
    "prompt",
    "safety",
    "compare",
    "artificial",
    "intelligence",
    "Large",
    "Language",
    "Models",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]
dependencies = [
    "jq>=1.6.0,<2.0.0",
    "click>=8.3.0,<9.0.0",
    "casefy>=1.0.0,<2.0.0",
    "termcolor>=2.4,<4.0",
    "pip>=24,<26",
    "jinja2>=3.1.3,<4.0.0",
    "scipy>=1.12.0,<2.0.0",
    # Known CVE that doesn't affect us: https://nvd.nist.gov/vuln/detail/CVE-2022-42969
    "retry>=0.9.2,<0.10.0",
    "tabulate>=0.9.0,<0.10.0",
    "zstandard>=0.25.0,<0.26.0",
    "tqdm>=4.66.1",
    "types-tqdm>=4.66.0.0",
    "pydantic>=2.6.0,<3.0.0",
    # Known CVE that doesn't apply for our caching use case.
    # See https://github.com/piskvorky/sqlitedict/issues/174 for more.
    "sqlitedict>=2.1.0,<3.0.0",
    "gdown>=5.1.0",
    "tomli>=2.0.1,<3.0.0",
    "typing-extensions>=4.10.0,<5.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "diskcache>=5.6.3,<6.0.0",
    "starlette>=0.41",
    "fastapi>=0.115",
    "together>=1.2.3,<2.0.0",
    "anthropic",
    "azure-ai-ml>=1.22,<2.0.0",
    "google-api-python-client>=2.179.0",
    "google-genai>=1.17.0,<2.0.0",
    "google-auth>=2.36.0,<3.0.0",
    "mistralai>=1.9.11,<2.0.0",
    "typing-inspect>=0.9.0,<1.0.0",
    "boto3>=1.36.25,<2.0.0",
    "prometheus-client>=0.23.1,<1.0.0",
    "llama-api-client>=0.5,<0.7",
    "huggingface-hub>=1.2.3,<2.0.0",
    "openai>=2.12.0,<3.0.0",
    "pyarrow>=22.0.0,<24.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "uvicorn>=0.38,<0.41",
    "airrlogger",
]

[project.urls]
Repository = "https://github.com/mlcommons/modelbench"

[project.scripts]
modelbench = "modelbench.cli:cli"
modelgauge = "modelgauge.cli:cli"

[dependency-groups]
dev = [
    "pytest-datafiles>=3.0.0,<4.0.0",
    "pytest>=9.0.1,<10.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-timeout>=2.3.1,<3.0.0",
    "mypy>=1.7.1,<2.0.0",
    "black>=25.1.0,<27.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "flaky>=3.8.1,<4.0.0",
    "types-beautifulsoup4>=4.12.0.20240229,<5.0.0",
    "httpx>=0.27.2,<0.29.0",
    "freezegun>=1.5.5,<2.0.0",
]

[tool.uv]
package = true
# together depends on typer and hfh depends on typer-slim. 
# they both install to the same package (typer), and so can 
# result in conflicts. here, we explicitly exclude typer-slim,
# which hfh does not pin to any version.
exclude-dependencies = [ "typer-slim" ]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["modelbench", "modelbench.*", "modelgauge", "modelgauge.*"]
namespaces = true

[tool.setuptools.package-data]
"modelgauge.config_templates" = ["*.toml"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=src/modelgauge/",
]
pythonpath = [
    "src", "tests", "tests/modelbench_tests", "tests/modelgauge_tests",
]
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.mypy]
# Using namespace packages to do plugins requires us not to have __init__.py files.
# However, by default mypy uses those to map file paths to modules. This override fixes that.
# https://mypy.readthedocs.io/en/stable/config_file.html#confval-explicit_package_bases
explicit_package_bases = true
mypy_path = "., src, tests"

[[tool.mypy.overrides]]
module = "modelgauge.tests.*,modelgauge.annotators.*,modelgauge.safety_model_response"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The SUTs, when they were separate plugins, generally weren't written to 
# comply; ignoring errors here for now.
module = "modelgauge.suts.*"
ignore_errors = true
