[tool.poetry]
name = "demo_plugin"
version = "0.3.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
