[tool.poetry]
name = "mmlu"
version = "0.1.0"
description = ""
authors = ["dhosterman <daniel@danielhosterman.com>"]
readme = "README.md"
packages = [{include = "newhelm"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
