[tool.poetry]
name = "ridiculous_benchmark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "newhelm"}]

[tool.poetry.dependencies]
python = "^3.10"
mmlu = {path = "../mmlu", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
