[tool.poetry]
name = "modelgauge-amazon"
version = "1.0.0"
description = ""
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
readme = "README.md"
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.36.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
