[tool.poetry]
name = "modelgauge-anthropic"
version = "0.6.3"
description = ""
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
readme = "README.md"
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "*"
modelgauge_openai = {version = "*", optional = false}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
