[tool.poetry]
name = "newhelm-huggingface"
version = "0.2.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "newhelm"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
transformers = "^4.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
