[tool.poetry]
name = "modelgauge-huggingface"
version = "0.6.1"
description = ""
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
readme = "README.md"
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
transformers = "^4.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
