[tool.poetry]
name = "modelgauge-mistral"
version = "1.0.0"
description = "Mistral SUT"
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
readme = "README.md"
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^1.5.0"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
