[tool.poetry]
name = "modelgauge-mistralai"
version = "0.1.0"
description = "Mistral SUT"
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
readme = "README.md"
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^1.2.3"
google-auth = "^2.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
