[tool.poetry]
name = "perspective_api"
version = "0.2.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "newhelm"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = ">=2.64.0,<2.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
