[tool.poetry]
name = "standard_tests"
version = "0.2.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "newhelm"}]

[tool.poetry.dependencies]
python = "^3.10"
perspective_api = {version = "*"}
newhelm-openai = {version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mlcommons"
url = "https://us-central1-python.pkg.dev/ai-safety-dev/aisafety-pypi/simple"
priority = "primary"
