[tool.poetry]
name = "standard_tests"
version = "0.3.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "newhelm"}]

[tool.poetry.dependencies]
python = "^3.10"
perspective_api = {version = "*"}
newhelm-openai = {version = "*"}
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
statsmodels = "^0.14.1"
pandas-stubs = "^2.2.1.240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mlcommons"
url = "https://us-central1-python.pkg.dev/ai-safety-dev/aisafety-pypi/simple"
priority = "primary"
