[tool.poetry]
name = "newhelm-together"
version = "0.2.6"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "newhelm"}]

[tool.poetry.dependencies]
python = "^3.10"
together = "^0.2.6"
types-requests = "^2.31.0.20240125"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
