[tool.poetry]
name = "modelgauge-together"
version = "0.3.3"
description = ""
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
readme = "README.md"
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"
together = "^0.2.11"
types-requests = "^2.31.0.20240125"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
