[tool.poetry]
name = "modelgauge-vertexai"
version = "0.1.0"
description = "Mistral SUT"
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
readme = "README.md"
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"
google-auth = "^2.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
